doc store and parallel

--- a/notebooks/store_benchmark.ipynb
+++ b/notebooks/store_benchmark.ipynb
@@ -85,6 +85,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import dbm.gnu"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import os\n",
     "import shutil\n",
     "bench_dir = '../data/bench'\n",
@@ -95,19 +104,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "mem_store = dict()\n",
     "lmdb_store = zarr.LMDBStore(os.path.join(bench_dir, 'lmdb'))\n",
     "bdb_store = zarr.DBMStore(os.path.join(bench_dir, 'bdb'), open=bsddb3.btopen)\n",
+    "gdb_store = zarr.DBMStore(os.path.join(bench_dir, 'gdb'), open=dbm.gnu.open)\n",
     "dir_store = zarr.DirectoryStore(os.path.join(bench_dir, 'dir'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +163,7 @@
        "Chunks initialized : 4096/4096"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,29 +172,13 @@
     "a = np.arange(1000000000)\n",
     "mem_z = zarr.empty_like(a, store=mem_store, overwrite=True)\n",
     "lmdb_z = zarr.empty_like(a, store=lmdb_store, overwrite=True)\n",
+    "gdb_z = zarr.empty_like(a, store=gdb_store, overwrite=True)\n",
     "bdb_z = zarr.empty_like(a, store=bdb_store, overwrite=True)\n",
     "dir_z = zarr.empty_like(a, store=dir_store, overwrite=True)\n",
     "\n",
     "# check compression ratio\n",
     "mem_z[:] = a\n",
     "mem_z.info"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "768 ms ± 74.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%timeit save(a, mem_z)"
    ]
   },
   {
@@ -196,12 +190,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "853 ms ± 58.7 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "696 ms ± 18.9 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit save(a, lmdb_z)"
+    "%timeit save(a, mem_z)"
    ]
   },
   {
@@ -213,12 +207,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.29 s ± 78.9 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "729 ms ± 27.6 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit save(a, bdb_z)"
+    "%timeit save(a, lmdb_z)"
    ]
   },
   {
@@ -230,12 +224,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.44 s ± 9.71 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.1 s ± 12.6 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit save(a, dir_z)"
+    "%timeit save(a, gdb_z)"
    ]
   },
   {
@@ -247,12 +241,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.06 s ± 11 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.24 s ± 25.7 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit load(mem_z, a)"
+    "%timeit save(a, bdb_z)"
    ]
   },
   {
@@ -264,12 +258,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.09 s ± 10 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.72 s ± 66.3 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit load(lmdb_z, a)"
+    "%timeit save(a, dir_z)"
    ]
   },
   {
@@ -281,12 +275,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.11 s ± 4.7 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "949 ms ± 37.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit load(bdb_z, a)"
+    "%timeit load(mem_z, a)"
    ]
   },
   {
@@ -298,7 +292,58 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.26 s ± 16.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "955 ms ± 8.73 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit load(lmdb_z, a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.02 s ± 8.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit load(gdb_z, a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.23 s ± 65.6 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit load(bdb_z, a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2 s ± 5.63 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -315,13 +360,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table class=\"zarr-info\"><tbody><tr><th style=\"text-align: left\">Type</th><td style=\"text-align: left\">zarr.core.Array</td></tr><tr><th style=\"text-align: left\">Data type</th><td style=\"text-align: left\">int64</td></tr><tr><th style=\"text-align: left\">Shape</th><td style=\"text-align: left\">(1000000000,)</td></tr><tr><th style=\"text-align: left\">Chunk shape</th><td style=\"text-align: left\">(244141,)</td></tr><tr><th style=\"text-align: left\">Order</th><td style=\"text-align: left\">C</td></tr><tr><th style=\"text-align: left\">Read-only</th><td style=\"text-align: left\">False</td></tr><tr><th style=\"text-align: left\">Compressor</th><td style=\"text-align: left\">Blosc(cname='lz4', clevel=5, shuffle=SHUFFLE, blocksize=0)</td></tr><tr><th style=\"text-align: left\">Store type</th><td style=\"text-align: left\">builtins.dict</td></tr><tr><th style=\"text-align: left\">No. bytes</th><td style=\"text-align: left\">8000000000 (7.5G)</td></tr><tr><th style=\"text-align: left\">No. bytes stored</th><td style=\"text-align: left\">4041602661 (3.8G)</td></tr><tr><th style=\"text-align: left\">Storage ratio</th><td style=\"text-align: left\">2.0</td></tr><tr><th style=\"text-align: left\">Chunks initialized</th><td style=\"text-align: left\">4096/4096</td></tr></tbody></table>"
+       "<table class=\"zarr-info\"><tbody><tr><th style=\"text-align: left\">Type</th><td style=\"text-align: left\">zarr.core.Array</td></tr><tr><th style=\"text-align: left\">Data type</th><td style=\"text-align: left\">int64</td></tr><tr><th style=\"text-align: left\">Shape</th><td style=\"text-align: left\">(1000000000,)</td></tr><tr><th style=\"text-align: left\">Chunk shape</th><td style=\"text-align: left\">(244141,)</td></tr><tr><th style=\"text-align: left\">Order</th><td style=\"text-align: left\">C</td></tr><tr><th style=\"text-align: left\">Read-only</th><td style=\"text-align: left\">False</td></tr><tr><th style=\"text-align: left\">Compressor</th><td style=\"text-align: left\">Blosc(cname='lz4', clevel=5, shuffle=SHUFFLE, blocksize=0)</td></tr><tr><th style=\"text-align: left\">Store type</th><td style=\"text-align: left\">builtins.dict</td></tr><tr><th style=\"text-align: left\">No. bytes</th><td style=\"text-align: left\">8000000000 (7.5G)</td></tr><tr><th style=\"text-align: left\">No. bytes stored</th><td style=\"text-align: left\">4041602921 (3.8G)</td></tr><tr><th style=\"text-align: left\">Storage ratio</th><td style=\"text-align: left\">2.0</td></tr><tr><th style=\"text-align: left\">Chunks initialized</th><td style=\"text-align: left\">4096/4096</td></tr></tbody></table>"
       ],
       "text/plain": [
        "Type               : zarr.core.Array\n",
@@ -333,12 +378,12 @@
        "Compressor         : Blosc(cname='lz4', clevel=5, shuffle=SHUFFLE, blocksize=0)\n",
        "Store type         : builtins.dict\n",
        "No. bytes          : 8000000000 (7.5G)\n",
-       "No. bytes stored   : 4041602661 (3.8G)\n",
+       "No. bytes stored   : 4041602921 (3.8G)\n",
        "Storage ratio      : 2.0\n",
        "Chunks initialized : 4096/4096"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,63 +392,13 @@
     "a = np.random.randint(0, 2**30, size=1000000000)\n",
     "mem_z = zarr.empty_like(a, store=mem_store, overwrite=True)\n",
     "lmdb_z = zarr.empty_like(a, store=lmdb_store, overwrite=True)\n",
+    "gdb_z = zarr.empty_like(a, store=gdb_store, overwrite=True)\n",
     "bdb_z = zarr.empty_like(a, store=bdb_store, overwrite=True)\n",
     "dir_z = zarr.empty_like(a, store=dir_store, overwrite=True)\n",
     "\n",
     "# check compression ratio\n",
     "mem_z[:] = a\n",
     "mem_z.info"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.26 s ± 15.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%timeit save(a, mem_z)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "6 s ± 985 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%timeit save(a, lmdb_z)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "9.78 s ± 1.25 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
-     ]
-    }
-   ],
-   "source": [
-    "%timeit save(a, bdb_z)"
    ]
   },
   {
@@ -415,12 +410,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.96 s ± 312 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "1.41 s ± 86.3 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit save(a, dir_z)"
+    "%timeit save(a, mem_z)"
    ]
   },
   {
@@ -432,12 +427,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.3 s ± 60.3 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "5.54 s ± 989 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit load(mem_z, a)"
+    "%timeit save(a, lmdb_z)"
    ]
   },
   {
@@ -449,12 +444,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.4 s ± 42.2 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "6.88 s ± 1.27 s per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit load(lmdb_z, a)"
+    "%timeit save(a, gdb_z)"
    ]
   },
   {
@@ -466,12 +461,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.76 s ± 25.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "9.49 s ± 312 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "%timeit load(bdb_z, a)"
+    "%timeit save(a, bdb_z)"
    ]
   },
   {
@@ -483,7 +478,92 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.81 s ± 64.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "6.01 s ± 402 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit save(a, dir_z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.23 s ± 8.53 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit load(mem_z, a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2 s ± 39.7 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit load(lmdb_z, a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.55 s ± 23.6 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit load(gdb_z, a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.85 s ± 153 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit load(bdb_z, a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.5 s ± 93.7 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -500,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,6 +659,42 @@
    ],
    "source": [
     "%time dask_op(lmdb_z, mem_z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 43.3 s, sys: 7.16 s, total: 50.4 s\n",
+      "Wall time: 14.1 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time dask_op(mem_z, gdb_z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 30.9 s, sys: 3.93 s, total: 34.8 s\n",
+      "Wall time: 8.95 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time dask_op(gdb_z, mem_z)"
    ]
   },
   {
@@ -1203,11 +1319,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "lmdb_store.close()\n",
+    "gdb_store.close()\n",
     "bdb_store.close()"
    ]
   },
