--- a/notebooks/store_benchmark.ipynb
+++ b/notebooks/store_benchmark.ipynb
@@ -124,14 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Main benchmarks\n",
-    "\n",
-    "mem_store = dict()\n",
-    "lmdb_store = zarr.LMDBStore(os.path.join(bench_dir, 'lmdb'))\n",
-    "bdb_store = zarr.DBMStore(os.path.join(bench_dir, 'bdb'), open=bsddb3.btopen)\n",
-    "gdb_store = zarr.DBMStore(os.path.join(bench_dir, 'gdb'), open=dbm.gnu.open, flag='nf')\n",
-    "zip_store = zarr.ZipStore(os.path.join(bench_dir, 'zip'), mode='w')\n",
-    "dir_store = zarr.DirectoryStore(os.path.join(bench_dir, 'dir'))"
+    "## Main benchmarks"
    ]
   },
   {
