--- a/notebooks/object_arrays.ipynb
+++ b/notebooks/object_arrays.ipynb
@@ -307,17 +307,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['Xin chào thế giới', 'Servus Woid!', 'Γεια σου κόσμε!', ...,\n",
-       "       'Γεια σου κόσμε!', 'Hei maailma!', 'เฮลโลเวิลด์'], dtype=object)"
+       "array(['Hej Världen!', 'こんにちは世界', 'Servus Woid!', ..., 'Helló, világ!',\n",
+       "       'Zdravo svete!', 'เฮลโลเวิลด์'], dtype=object)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,18 +329,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "msgpack_codec = numcodecs.MsgPack()\n",
     "json_codec = numcodecs.JSON()\n",
-    "pickle_codec = numcodecs.Pickle()"
+    "pickle_codec = numcodecs.Pickle()\n",
+    "cat_codec = numcodecs.Categorize(greetings, dtype=object, astype='u1')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -351,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,6 +445,31 @@
    ],
    "source": [
     "benchmark_codec(pickle_codec)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Categorize(dtype='|O', astype='|u1', labels=['¡Hola mundo!', 'Hej Världen!', 'Servus Woid!', ...])\n",
+      "encode\n",
+      "216 ms ± 6.39 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n",
+      "decode\n",
+      "29 ms ± 221 µs per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "size         : 1,000,000\n",
+      "size (zstd 1): 458,146\n",
+      "size (zstd 5): 493,686\n",
+      "size (zstd 9): 490,583\n"
+     ]
+    }
+   ],
+   "source": [
+    "benchmark_codec(cat_codec)"
    ]
   },
   {
