corrections to header

--- a/docs/tutorial_nb.ipynb
+++ b/docs/tutorial_nb.ipynb
@@ -9,6 +9,13 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Zarr provides classes and functions for working with N-dimensional arrays that behave like NumPy arrays but whose data is divided into chunks and each chunk is compressed. If you are already familiar with HDF5 then Zarr arrays provide similar functionality, but with some additional flexibility."
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "M-JjZsSt2ow1"
       },
@@ -26,17 +33,6 @@
       "outputs": [],
       "source": [
         "pip install zarr"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "mQw5YpxcsRTV"
-      },
-      "source": [
-        "#Tutorial\n",
-        "\n",
-        "Zarr provides classes and functions for working with N-dimensional arrays that behave like NumPy arrays but whose data is divided into chunks and each chunk is compressed. If you are already familiar with HDF5 then Zarr arrays provide similar functionality, but with some additional flexibility."
       ]
     },
     {
@@ -1002,7 +998,7 @@
         "id": "BknVdBuRLo_Q"
       },
       "source": [
-        "## #Indexing with Coordinate Arrays\n",
+        "## Indexing with Coordinate Arrays\n",
         "Items from a Zarr array can be extracted by providing an integer array of coordinates. E.g.:"
       ]
     },
@@ -1174,7 +1170,7 @@
         "id": "vd8qKAgYMmLk"
       },
       "source": [
-        "## #Indexing with Mask Array\n",
+        "## Indexing with Mask Array\n",
         "Items can also be extracted by providing a Boolean mask. E.g.:"
       ]
     },
@@ -1310,7 +1306,7 @@
         "id": "AX7Ttfc_Nbfh"
       },
       "source": [
-        "## #Orthogonal Indexing\n",
+        "## Orthogonal Indexing\n",
         "Zarr arrays also support methods for orthogonal indexing, which allows selections to be made along each dimension of an array independently. For example, this allows selecting a subset of rows and/or columns from a 2-dimensional array. E.g.:"
       ]
     },
@@ -1457,7 +1453,7 @@
         "id": "hcb6xE8FPqgX"
       },
       "source": [
-        "## #Indexing Fields in Structured Arrays\n",
+        "## Indexing Fields in Structured Arrays\n",
         "All selection methods support a ```fields``` parameter which allows retrieving or replacing data for a specific field in an array with a structured dtype. E.g.:"
       ]
     },
@@ -1785,7 +1781,7 @@
         "id": "o9nezRjYbvo6"
       },
       "source": [
-        "## #Distributed/Cloud Storage"
+        "## Distributed/Cloud Storage"
       ]
     },
     {
@@ -1945,7 +1941,7 @@
         "id": "vhkal_STPQrH"
       },
       "source": [
-        "## #IO with ```fsspec```\n",
+        "## IO with ```fsspec```\n",
         "\n",
         "As of version 2.5, zarr supports passing URLs directly to [fsspec](https://filesystem-spec.readthedocs.io/en/latest/), and having it create the “mapping” instance automatically. This means, that for all of the backend storage implementations [supported by fsspec](https://filesystem-spec.readthedocs.io/en/latest/api.html#built-in-implementations), you can skip importing and configuring the storage explicitly. For example:\n",
         "\n"
@@ -2025,7 +2021,7 @@
         "id": "-HpqJgMyVoBR"
       },
       "source": [
-        "## #Consolidating Metadata\n",
+        "## Consolidating Metadata\n",
         "\n",
         "Since there is a significant overhead for every connection to a cloud object store such as S3, the pattern described in the previous section may incur significant latency while scanning the metadata of the array hierarchy, even though each individual metadata object is small. For cases such as these, once the data are static and can be regarded as read-only, at least for the metadata/structure of the array hierarchy, the many metadata objects can be consolidated into a single one via [```zarr.convenience.consolidate_metadata()```](https://zarr.readthedocs.io/en/stable/api/convenience.html#zarr.convenience.consolidate_metadata). Doing this can greatly increase the speed of reading the array metadata, e.g.:"
       ]
@@ -2642,7 +2638,7 @@
         "id": "PhJ4A1z2O4VF"
       },
       "source": [
-        "## #Ragged Arrays\n",
+        "## Ragged Arrays\n",
         "\n",
         "If you need to store an array of arrays, where each member array can be of any length and stores the same primitive type (a.k.a. a ragged array), the ```numcodecs.VLenArray``` codec can be used, e.g.:"
       ]
@@ -2745,7 +2741,7 @@
         "id": "JuuGDVbCPsYz"
       },
       "source": [
-        "## #Chunk Size and Shape\n",
+        "## Chunk Size and Shape\n",
         "\n",
         "In general, chunks of at least 1 megabyte (1M) uncompressed size seem to provide better performance, at least when using the Blosc compression library.\n",
         "\n",
@@ -2854,7 +2850,7 @@
         "id": "HCKZ9GP1RtlF"
       },
       "source": [
-        "## #Chunk Memory Layout\n",
+        "## Chunk Memory Layout\n",
         "\n",
         "The order of bytes **within each chunk** of an array can be changed via the ```order``` keyword argument, to use either C or Fortran layout. For multi-dimensional arrays, these two layouts may provide different compression ratios, depending on the correlation structure within the data. E.g.:"
       ]
@@ -2899,7 +2895,7 @@
         "id": "VV_mOZ1VSQBN"
       },
       "source": [
-        "## #Empty Chunks\n",
+        "## Empty Chunks\n",
         "\n",
         "As of version 2.11, it is possible to configure how Zarr handles the storage of chunks that are “empty” (i.e., every element in the chunk is equal to the array’s fill value). When creating an array with ```write_empty_chunks=False``` (the default), Zarr will check whether a chunk is empty before compression and storage. If a chunk is empty, then Zarr does not store it, and instead deletes the chunk from storage if the chunk had been previously stored.\n",
         "\n",
@@ -2973,7 +2969,7 @@
         "id": "f22Cm6_tVEgL"
       },
       "source": [
-        "## #Changing Chunk Shapes (Rechunking)\n",
+        "## Changing Chunk Shapes (Rechunking)\n",
         "\n",
         "Sometimes you are not free to choose the initial chunking of your input data, or you might have data saved with chunking which is not optimal for the analysis you have planned. In such cases it can be advantageous to re-chunk the data. For small datasets, or when the mismatch between input and output chunks is small such that only a few chunks of the input dataset need to be read to create each chunk in the output array, it is sufficient to simply copy the data to a new array with the desired chunking, e.g."
       ]
@@ -3285,7 +3281,7 @@
         "id": "lvmF6UpIeaZW"
       },
       "source": [
-        "## #Copying Large Arrays\n",
+        "## Copying Large Arrays\n",
         "\n",
         "Data can be copied between large arrays without needing much memory, e.g.:"
       ]
