--- a/docs/tutorial_nb.ipynb
+++ b/docs/tutorial_nb.ipynb
@@ -67,7 +67,9 @@
       "source": [
         "The code above creates a 2-dimensional array of 32-bit integers with 10000 rows and 10000 columns, divided into chunks where each chunk has 1000 rows and 1000 columns (and so there will be 100 chunks in total).\n",
         "\n",
-        "For a complete list of array creation routines see the [```zarr.creation```](https://zarr.readthedocs.io/en/stable/api/creation.html#module-zarr.creation) module documentation."
+        "For a complete list of array creation routines see the **[zarr.creation](https://zarr.readthedocs.io/en/stable/api/creation.html#module-zarr.creation)** module documentation.\n",
+        "\n",
+        "\n"
       ]
     },
     {
