--- a/docs/tutorial_nb.ipynb
+++ b/docs/tutorial_nb.ipynb
@@ -2036,7 +2036,7 @@
       },
       "outputs": [],
       "source": [
-        "zarr.consolidate_metadata(store)"
+        "zarr.convenience.consolidate_metadata(store)"
       ]
     },
     {
@@ -3026,7 +3026,7 @@
       },
       "outputs": [],
       "source": [
-        "a = zarr.zeros((10000,10000), chunks=(10000, 1), dtype='uint16, store='a.zarr')\n",
+        "a = zarr.zeros((10000,10000), chunks=(10000, 1), dtype='uint16', store='a.zarr')\n",
         "b = a[...]\n",
         "c = zarr.array(b, chunks=(1,10000), store='c.zarr')"
       ]
