revert to upstream main

--- a/notebooks/dask_copy.ipynb
+++ b/notebooks/dask_copy.ipynb
@@ -33,7 +33,7 @@
       "text/html": [
        "\n",
        "    <div class=\"bk-root\">\n",
-       "        <a href=\"https://bokeh.org\" target=\"_blank\" class=\"bk-logo bk-logo-small bk-logo-notebook\"></a>\n",
+       "        <a href=\"http://bokeh.pydata.org\" target=\"_blank\" class=\"bk-logo bk-logo-small bk-logo-notebook\"></a>\n",
        "        <span id=\"d4821cb3-378c-411d-a941-d0708c0c532b\">Loading BokehJS ...</span>\n",
        "    </div>"
       ]
