--- a/notebooks/dask_count_alleles.ipynb
+++ b/notebooks/dask_count_alleles.ipynb
@@ -26,7 +26,7 @@
       "text/html": [
        "\n",
        "    <div class=\"bk-root\">\n",
-       "        <a href=\"https://bokeh.org\" target=\"_blank\" class=\"bk-logo bk-logo-small bk-logo-notebook\"></a>\n",
+       "        <a href=\"http://bokeh.pydata.org\" target=\"_blank\" class=\"bk-logo bk-logo-small bk-logo-notebook\"></a>\n",
        "        <span id=\"b153ad5f-436a-4afb-945c-87790add89c8\">Loading BokehJS ...</span>\n",
        "    </div>"
       ]
